--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>geym.java.training</groupId>
-	<artifactId>ch12_hw</artifactId>
+	<artifactId>geym-spring02-fileSearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ch12_hw</name>
+	<name>fileSearch</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
